# cock-lib

./: Cargo.toml  README.md
src/: cock_handler.rs  cock_struct.rs  lib.rs  tier.rs  user.rs
src/bin_modules/: mod.rs
src/bin_modules/standard_prompt/: mod.rs
src/bin_modules/tui_prompt/: draw.rs
src/bin_use/: mod.rs
src/cock_parts/: abnormalities.rs  aesthetic.rs  balls.rs  circumcision.rs  curvature.rs  mod.rs  shape.rs  size.rs  veininess.rs
