[package]
name = "cock-lib"
version = "2.2.0"
license = "MIT"
description = "Measure the power level of a peen"
edition = '2021'
authors = ["turn"]
keywords = ["cocks", "penis", "anatomy", "tier", "ranking"]
repository = "https://github.com/im-turn/cock-lib"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
bin_use = []
